# purviewanalyzer

./: .gitignore  Dockerfile  README.md  demo_text.txt  flair_recognizer.py  index.md  openai_fake_data_generator.py  presidio_helpers.py  presidio_nlp_engine_config.py  presidio_streamlit.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-containerapp.yml
app/: __init__.py  api.py  config.py  db.py  docs_renderer.py  entities_service.py  file_extract.py  github_browser.py  import_entities.py  model_storage.py  models.py  recognizer_codegen.py  recognizer_json.py  recognizer_loader.py  recognizers_service.py  startup_entity_sync.py
content/docs/samples/python/streamlit/: presidio_nlp_engine_config.py
content/docs_old/: code.md  faq.md  installation.md  tutorial.md
docs/: DEV_NOTES.md
predefined_recognizers/: __init__.py
predefined_recognizers/country_specific/australia/: __init__.py  au_bsb_cba_recognizer.py  au_bsb_nab_recognizer.py  au_bsb_stg_recognizer.py  au_bsb_wbc_recognizer.py  au_bsb_westpac_bank.py  au_passport_recognizer.py
predefined_recognizers/country_specific/korea/: kr_frn_recognizer.py
purviewanalyzer/: __init__.py  verify_storage.py
scripts/: azure_deploy.ps1  azure_deploy.sh  import_entities.py  sync_docs.py
tests/: test_au_bsb_westpac_recognizer.py  test_country_specific_loader.py  test_db_path_config.py  test_entities_import.py
