[tool.poetry]
name = "presidio-streamlit"
version = "0.1.0"
description = ""
authors = ["Presidio"]
readme = "index.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
presidio-analyzer = {extras = ["transformers"], version = "^2.2.355"}
spacy-stanza = "^1.0.4"
presidio-anonymizer = "^2.2.355"
streamlit = "^1.39.0"
packaging = ">=24.1,<25"
sqlalchemy = "^2.0.36"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
httpx = "^0.27.2"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
markdownify = "^0.13.1"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
st-annotated-text = "^4.0.1"
streamlit-tags = "^1.2.8"
flair = "^0.14.0"
openai = "^1.53.0"
azure-ai-textanalytics = "^5.3.0"
en_core_web_lg = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0.tar.gz"}
en_core_web_sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0.tar.gz"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
